Added PVCs section & direct CSI panel
