# models/list_p_v_cs_response.go
@@ -1,0 +1,97 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// This file is part of MinIO Console Server
+// Copyright (c) 2021 MinIO, Inc.
+//
+// This program is free software: you can redistribute it and/or modify
+// it under the terms of the GNU Affero General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU Affero General Public License for more details.
+//
+// You should have received a copy of the GNU Affero General Public License
+// along with this program.  If not, see <http://www.gnu.org/licenses/>.
+//
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ListPVCsResponse list p v cs response
+//
+// swagger:model listPVCsResponse
+type ListPVCsResponse struct {
+
+	// pvcs
+	Pvcs []*PvcsListResponse `json:"pvcs"`
+}
+
+// Validate validates this list p v cs response
+func (m *ListPVCsResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validatePvcs(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ListPVCsResponse) validatePvcs(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Pvcs) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Pvcs); i++ {
+		if swag.IsZero(m.Pvcs[i]) { // not required
+			continue
+		}
+
+		if m.Pvcs[i] != nil {
+			if err := m.Pvcs[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("pvcs" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ListPVCsResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ListPVCsResponse) UnmarshalBinary(b []byte) error {
+	var res ListPVCsResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
